# rocket-diesel-users-api

./: .gitignore  Production.md  README.md  docker-compose-dev.yml  flake.nix
.github/workflows/: rust.yml
api/: Cargo.toml  Dockerfile  Rocket.toml
api/migrations/2023-11-11-133538_create_users/: up.sql
api/src/: error.rs  main.rs  prelude.rs  routes.rs  tracing_fairing.rs  user.rs
api/src/db/: mod.rs  models.rs  pool.rs  schema.rs
config/: setup.sql
config/certs/: api-dev.crt  api-dev.key  api.cnf  ca-dev.crt  ca-dev.key  client-dev.crt  client-dev.key  client.cnf
