[package]
name = "users-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# API
rocket = { version = "0.5.0-rc.4", features = ["json", "mtls"] }
rocket_db_pools = { version = "0.1.0-rc.4", features = ["diesel_postgres"] }
diesel = { version = "2.1.0", features = ["uuid", "chrono"] }
diesel-async = { version = "0.3.1", features = ["postgres"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

uuid = { version = "1.5.0", features = [ "std", "v4", "fast-rng", "macro-diagnostics", "serde" ] }
serde = "1.0.192"
serde_json = "1.0.108"
futures = "0.3.29"
chrono = "0.4.31"
async-trait = "0.1.74"

# Logging
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-log = "0.1.3"
tracing-subscriber = {version="0.3.17", features=["env-filter", "json", "registry", "smallvec"]}
yansi = "0.5.1"
email_address = "0.2.4"
regex = "1.10.2"
